@@ -1,3 +1,13 @@
+2006-07-13  Benoît Dejean  <benoit@placenet.org>
+
+	* src/procdialogs.c:
+	* src/smooth_refresh.c:
+	* src/util.c:
+	* src/util.h:
+	
+	New function : procman_debug(fmt, ...).
+	Displays debug messages if GNOME_SYSTEM_MONITOR_DEBUG is defined.
+
 2006-07-10  Rodney Dawes  <dobey@novell.com>
 
 	* configure.in: Require pkg-config 0.19 and gnome-icon-theme 2.15.3
